--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "release": "standard-version && npm publish",
+    "postrelease": "git push && git push origin --tags"
   },
   "repository": {
     "type": "git",
